Minor Bugfix - removed sidebar flickering on pagelaod
+ the sidebar was flickering because it was displayed and then moved
  now it's position is set first and then its display is changed to
  visible

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     text-align:center;
     border-radius: 0 0 0 0.5rem;
     transition: all 0.3s ease;
+    display: none /* to avoid flicker on pageload*/
 }
 
 #saved-searches-div hr {
